--- a/examAngular/Portfolio/src/app/components/header/navbar/navbar.component.html
+++ b/examAngular/Portfolio/src/app/components/header/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark ">
     <div class="container">
       <a class="navbar-brand" href="#">Bonnet Alan</a>
       <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
@@ -14,7 +14,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link fs-4" href="#">
-                    <i class="bi bi-facebook"></i>
+                    <i class="bi bi-facebook fs-4"></i>
                 </a>
             </li>
             <li class="nav-item">
