navbar cambio visión

--- a/examAngular/Portfolio/src/app/components/header/navbar/navbar.component.html
+++ b/examAngular/Portfolio/src/app/components/header/navbar/navbar.component.html
@@ -9,19 +9,16 @@
           <ul class="navbar-nav ms-auto my-auto mt-lg-0">
               <li class="nav-item active">
                   <a class="nav-link my-auto" href="#">
-                    <i class="bi bi-instagram fs-4"></i>  
+                    <i class="bi bi-instagram fs-1"></i>  
                     <span class="visually-hidden">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link fs-4" href="#">
-                    <i class="bi bi-facebook fs-4"></i>
+                    <i class="bi bi-facebook fs-1"></i>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="" class="nav-link">
-
-                    <button class="btn btn-outline-success p-2">Login</button>
-                </a>
+                    <button class="nav-link-success btn btn-outline-success">Login</button>
             </li>
           </ul>
           
