--- a/examAngular/Portfolio/src/app/components/header/navbar/navbar.component.html
+++ b/examAngular/Portfolio/src/app/components/header/navbar/navbar.component.html
@@ -1,10 +1,14 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark ">
+<nav class="navbar navbar-expand navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Bonnet Alan</a>
-      <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+
+      <a class="navbar-brand" href="#">
+        <img src="https://argentinaprograma.inti.gob.ar/pluginfile.php/1/theme_moove/logo/1652360229/APLogo-20-20.png" alt="Logo Argentina Programa" width="114.45px" >
+        Argentina Programa
+      </a>
+      <!-- <button id="nb-toggler" class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-      </button>
+      </button> -->
       <div class="collapse navbar-collapse" id="collapsibleNavId">
           <ul class="navbar-nav ms-auto my-auto mt-lg-0">
               <li class="nav-item active">
@@ -18,7 +22,9 @@
                 </a>
             </li>
             <li class="nav-item">
-                    <button class="nav-link-success btn btn-outline-success">Login</button>
+                <a href="#" id="botonLogin" class="nav-link-success btn btn-outline-success py-auto mt-2 mt-sm-3 mt-lg-4 mt-xl-4">
+                    Login
+                </a>
             </li>
           </ul>
           
