Actualizacion perfil-photo

--- a/examAngular/Portfolio/src/app/components/body/body.component.html
+++ b/examAngular/Portfolio/src/app/components/body/body.component.html
@@ -3,12 +3,8 @@
         <!-- Perfil Contenido -->
         <div style="height:750px;">
             <img [src]="perfilBanner" class=" rounded" alt="" style="width: 100%;height: 50%;">
-            <div class="hover-blur border rounded-circle border-white border-5">
-                <a href="#" title="">
+            <div class=" border rounded-circle border-white border-5">
                   <img [src]="perfilPhoto" class=" perfil-photo border rounded-circle border-white border-5" alt="" style="width: 150px;height: 150px;"/>
-                  <h2><span class="text-white">Hover Blur</span></h2>
-                </a>
-                <h4 class="text-center">Hover-Blur</h4>
               </div>
             <!-- Nombre Perfil > Acerca De -->
             <div class="container">
