--- a/examAngular/Portfolio/src/app/components/body/body.component.css
+++ b/examAngular/Portfolio/src/app/components/body/body.component.css
@@ -7,16 +7,45 @@
     transition: .5s;
     background-color: #00000060;
 }
-.perfil-photo::after{
-    opacity: .8;
-    transition: .5s;
-    background-color: #00000060;
+
+.rounded-top-25px{
+  border-radius: 25px 25px 5px 5px;
+}
+.row{
+    padding: 20px !important;
+}
+.mxs-1{
+    margin-left: .15rem !important;
+    margin-right: .15rem !important;
 }
 
 
-
-/* @media screen and (min-width:1200px){
-    .perfil-nombre{
-        width: 50%;
+/*mediaquery para foto perfil*/
+@media (min-width:576px){
+    #perfilPhoto{
+        position: absolute;
+        width:15%;
+        box-shadow: 3px 3px 3px grey;
+        margin-top: -9.5%;
+        margin-left: 0%;
     }
-} */
+    
+}
+@media (min-width:576px) and (max-width:765px){
+    #perfilPhoto{
+        width: 25%;
+        margin-top: -19.5%;
+        margin-left: 2%;
+        box-shadow: 3px 3px 3px grey;
+        
+    }
+}
+@media (max-width:575px){
+    #perfilPhoto{
+        width: 50%;
+        margin-top: -35.5%;
+        margin-left: 25%;
+        box-shadow: 3px 3px 3px grey;
+        margin-bottom: 1.5rem;
+    }
+}
