--- a/examAngular/Portfolio/src/app/components/body/body.component.html
+++ b/examAngular/Portfolio/src/app/components/body/body.component.html
@@ -1,33 +1,21 @@
 <!-- Perfil Inicio -->
-<div class="container-sm mt-2 bg-white py-4 rounded" >
-        <!-- Perfil Contenido -->
-        <div style="height:750px;">
-            <img [src]="perfilBanner" class=" rounded" alt="" style="width: 100%;height: 50%;">
-            <div class=" border rounded-circle border-white border-5">
-                  <img [src]="perfilPhoto" class=" perfil-photo border rounded-circle border-white border-5" alt="" style="width: 150px;height: 150px;"/>
-              </div>
-            <!-- Nombre Perfil > Acerca De -->
-            <div class="container">
-                
-                <div class="row  bg-secondary bg-opacity-25">
-                    <div class="col-12 col-sm-4 mb-0 p-0">
-                        <h4 class="p-3  rounded  mb-0">
-                            {{perfilNombre}} 
-                        </h4>
-                    </div>
-                    <div class="col-12 col-sm-12 ps-sm-2 rounded-bottom pt-md-2">
-                        <h3>Acerca de mí:</h3>
-                        <div class="container">
-                            <p>
-                                {{perfilAcercaDe}}
-                            </p>
-                        </div>
-                    </div>
-        
-                </div>
-            </div>
+<div class="container ">
+    <div class="row bg-white my-2 mxs-1 p-2">
+        <div class="col-xd-12 col-sn-2 col-md-2 col-lg-2 ">
+            <img [src]="perfil.perfilPhoto" id="perfilPhoto" alt="" class="img-fluid border border-white border-5 rounded-circle">
+        </div>
+        <div class="col-xs-12 col-xs-2 col-md-2 col-lg-2">
+            <p class="fw-bold ms-2 pt-5 pt-md-3 mt-md-4 pt-lg-4 mt-lg-4 pt-xl-5 mt-xl-5" id="perfilNombre" >{{perfil.perfilNombre}}</p>
+            <p class="ms-2 ">Ing.Software </p>
+        </div>
+        <div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 text-center">
+            <span>
+                <h1>Acerca de mí</h1>
+                <p>{{perfil.perfilAcercaDe}}</p>
+            </span>
+        </div>
     </div>
-    
-        
 </div>
 <!-- Perfil Final -->
+<app-experiencia></app-experiencia>
+<app-educacion></app-educacion>
