--- a/examAngular/Portfolio/src/app/components/header/navbar/navbar.component.html
+++ b/examAngular/Portfolio/src/app/components/header/navbar/navbar.component.html
@@ -3,7 +3,7 @@
 
       <a class="navbar-brand" href="#">
         <img src="https://argentinaprograma.inti.gob.ar/pluginfile.php/1/theme_moove/logo/1652360229/APLogo-20-20.png" alt="Logo Argentina Programa" width="114.45px" >
-        Argentina Programa
+        <span id="textoAP"></span>
       </a>
       <!-- <button id="nb-toggler" class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
           aria-expanded="false" aria-label="Toggle navigation">
