agregado sección hardsoft skills proyecto, footer mejoras educacion y experiencia, arreglado parcial de perfil-photo

--- a/examAngular/Portfolio/src/app/components/body/body.component.css
+++ b/examAngular/Portfolio/src/app/components/body/body.component.css
@@ -19,7 +19,6 @@
     margin-right: .15rem !important;
 }
 
-
 /*mediaquery para foto perfil*/
 @media (min-width:576px){
     #perfilPhoto{
@@ -30,15 +29,39 @@
         margin-left: 0%;
     }
     
+    
 }
 @media (min-width:576px) and (max-width:765px){
     #perfilPhoto{
         width: 25%;
         margin-top: -19.5%;
         margin-left: 2%;
-        box-shadow: 3px 3px 3px grey;
         
     }
+}
+@media (min-width:1212px) and (max-width:1517px){
+    #perfilPhoto{
+
+        width:20%;
+    }
+    
+}
+@media (min-width:1518px) and (max-width:1759px){
+    #perfilPhoto{
+        width: 18%;
+    }
+}
+@media (min-width:1760px) and (max-width:1992px){
+    #perfilPhoto{
+        width: 17%;
+    }
+}
+
+@media (min-width:1993px){
+    #perfilPhoto{
+        width:15%;
+    }
+    
 }
 @media (max-width:575px){
     #perfilPhoto{
