--- a/examAngular/Portfolio/src/app/components/body/body.component.html
+++ b/examAngular/Portfolio/src/app/components/body/body.component.html
@@ -4,9 +4,9 @@
         <div class="col-xd-12 col-sn-2 col-md-2 col-lg-2 ">
             <img [src]="perfil.perfilPhoto" id="perfilPhoto" alt="" class="img-fluid border border-white border-5 rounded-circle">
         </div>
-        <div class="col-xs-12 col-xs-2 col-md-2 col-lg-2">
-            <p class="fw-bold ms-2 pt-5 pt-md-3 mt-md-4 pt-lg-4 mt-lg-4 pt-xl-5 mt-xl-5" id="perfilNombre" >{{perfil.perfilNombre}}</p>
-            <p class="ms-2 ">Ing.Software </p>
+        <div class="col-xs-12 col-xs-2 col-md-2 col-lg-2 perfil-nom pt-lg-4 pt-xl-5">
+            <h5 class="fw-bold pt-5 pt-md-3 mt-md-4 pt-lg-4 mt-lg-4 pt-xl-5 mt-xl-5" id="perfilNombre" >{{perfil.perfilNombre}}</h5>
+            <p class="">Ing.Software </p>
         </div>
         <div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 text-center">
             <span>
@@ -19,3 +19,6 @@
 <!-- Perfil Final -->
 <app-experiencia></app-experiencia>
 <app-educacion></app-educacion>
+<app-hys-skills></app-hys-skills>
+<app-proyecto></app-proyecto>
+<app-footer></app-footer>
