--- a/examAngular/Portfolio/src/app/components/hys-skills/hys-skills.component.html
+++ b/examAngular/Portfolio/src/app/components/hys-skills/hys-skills.component.html
@@ -1,1 +1,113 @@
-<p>hys-skills works!</p>
+<div class="container my-2">
+    <div class="row bg-white mxs-1">
+        <h1>Hard & Soft Skills</h1>
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+            <circle-progress
+                        [percent]="85"
+                        [radius]="80"
+                        [showUnits]="false"
+                        [title]="'HTML'"
+                        [titleFontSize]="'2em'"
+                        [showSubtitle]="false"
+                        [outerStrokeWidth]="16"
+                        [innerStrokeWidth]="2"
+                        [outerStrokeColor]="'#78C000'"
+                        [innerStrokeColor]="'#C7E596'"
+                        [animation]="true"
+                        [animationDuration]="300"
+                        
+                        >
+                    </circle-progress>
+        </div>
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+            <circle-progress
+                        [percent]="85"
+                        [radius]="80"
+                        [showUnits]="false"
+                        [title]="'CSS'"
+                        [titleFontSize]="'2em'"
+                        [showSubtitle]="false"
+                        [outerStrokeWidth]="16"
+                        [innerStrokeWidth]="2"
+                        [outerStrokeColor]="'#78C000'"
+                        [innerStrokeColor]="'#C7E596'"
+                        [animation]="true"
+                        [animationDuration]="300"
+                        
+                        >
+                    </circle-progress>
+        </div>
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+            <circle-progress
+                        [percent]="85"
+                        [radius]="80"
+                        [showUnits]="false"
+                        [title]="'JS'"
+                        [titleFontSize]="'2.5em'"
+                        [showSubtitle]="false"
+                        [outerStrokeWidth]="16"
+                        [innerStrokeWidth]="2"
+                        [outerStrokeColor]="'#78C000'"
+                        [innerStrokeColor]="'#C7E596'"
+                        [animation]="true"
+                        [animationDuration]="300"
+                        
+                        >
+                    </circle-progress>
+        </div>
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+            <circle-progress
+                        [percent]="85"
+                        [radius]="80"
+                        [showUnits]="false"
+                        [title]="'GitHub'"
+                        [titleFontSize]="'2em'"
+                        [showSubtitle]="false"
+                        [outerStrokeWidth]="16"
+                        [innerStrokeWidth]="2"
+                        [outerStrokeColor]="'#78C000'"
+                        [innerStrokeColor]="'#C7E596'"
+                        [animation]="true"
+                        [animationDuration]="300"
+                        
+                        >
+                    </circle-progress>
+        </div>
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+            <circle-progress
+                        [percent]="85"
+                        [radius]="80"
+                        [showUnits]="false"
+                        [title]="'English'"
+                        [titleFontSize]="'2em'"
+                        [showSubtitle]="false"
+                        [outerStrokeWidth]="16"
+                        [innerStrokeWidth]="2"
+                        [outerStrokeColor]="'#78C000'"
+                        [innerStrokeColor]="'#C7E596'"
+                        [animation]="true"
+                        [animationDuration]="300"
+                        
+                        >
+                    </circle-progress>
+        </div>
+        <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+            <circle-progress
+                        [percent]="85"
+                        [radius]="80"
+                        [showUnits]="false"
+                        [title]="'Angular'"
+                        [titleFontSize]="'2em'"
+                        [showSubtitle]="false"
+                        [outerStrokeWidth]="16"
+                        [innerStrokeWidth]="2"
+                        [outerStrokeColor]="'#78C000'"
+                        [innerStrokeColor]="'#C7E596'"
+                        [animation]="true"
+                        [animationDuration]="300"
+                        
+                        >
+                    </circle-progress>
+        </div>
+    </div>
+</div>
