--- a/examAngular/Portfolio/src/app/components/experiencia/experiencia.component.html
+++ b/examAngular/Portfolio/src/app/components/experiencia/experiencia.component.html
@@ -4,50 +4,26 @@
         <div class="col-lg-12">
             <ul class="list-group">
                 <li class="list-group-item my-2 border border-2">
-                    <h1 class="d-inline">Trabajo 1 -</h1>
-                    <h3 class="d-inline"> (Años)</h3>
+                    <h1 class="d-inline">{{expe.experienciaTitle}} -</h1>
+                    <h3 class="d-inline"> ({{expe.experienciaAnios}} Años)</h3>
                     <p>
-                        Lorem ipsum dolor, sit amet 
-                        consectetur adipisicing elit. 
-                        Atque explicabo autem quos qui 
-                        aliquid temporibus quas vel, asperiores 
-                        fuga dolore nesciunt. Nisi ipsam in eaque, 
-                        velit vitae blanditiis consequuntur fugit 
-                        eius magni alias? Animi illo similique 
-                        explicabo consequatur natus dolorum ad? 
-                        Expedita sed id ipsa labore incidunt autem dolor ab?
+                        {{expe.experienciaContent}}
                     </p>
                 </li>
                 
                 <li class="list-group-item my-2 border border-2">
-                    <h1 class="d-inline">Trabajo 2 -</h1>
-                    <h3 class="d-inline"> (Años)</h3>
+                    <h1 class="d-inline">{{expe.experienciaTitle2}} -</h1>
+                    <h3 class="d-inline"> ({{expe.experienciaAnios2}} Años)</h3>
                     <p>
-                        Lorem ipsum dolor, sit amet 
-                        consectetur adipisicing elit. 
-                        Atque explicabo autem quos qui 
-                        aliquid temporibus quas vel, asperiores 
-                        fuga dolore nesciunt. Nisi ipsam in eaque, 
-                        velit vitae blanditiis consequuntur fugit 
-                        eius magni alias? Animi illo similique 
-                        explicabo consequatur natus dolorum ad? 
-                        Expedita sed id ipsa labore incidunt autem dolor ab?
+                        {{expe.experienciaContent2}}
                     </p>
                 </li>
                 
                 <li class="list-group-item my-2 border border-2">
-                    <h1 class="d-inline">Trabajo 3 -</h1>
-                    <h3 class="d-inline"> (Años)</h3>
+                    <h1 class="d-inline">{{expe.experienciaTitle3}} -</h1>
+                    <h3 class="d-inline"> ({{expe.experienciaAnios3}} Años)</h3>
                     <p>
-                        Lorem ipsum dolor, sit amet 
-                        consectetur adipisicing elit. 
-                        Atque explicabo autem quos qui 
-                        aliquid temporibus quas vel, asperiores 
-                        fuga dolore nesciunt. Nisi ipsam in eaque, 
-                        velit vitae blanditiis consequuntur fugit 
-                        eius magni alias? Animi illo similique 
-                        explicabo consequatur natus dolorum ad? 
-                        Expedita sed id ipsa labore incidunt autem dolor ab?
+                        {{expe.experienciaContent3}}
                     </p>
                 </li>
                 
