--- a/examAngular/Portfolio/src/app/components/body/body.component.html
+++ b/examAngular/Portfolio/src/app/components/body/body.component.html
@@ -2,16 +2,18 @@
 <div class="container ">
     <div class="row bg-white my-2 mxs-1 p-2">
         <div class="col-xd-12 col-sn-2 col-md-2 col-lg-2 ">
-            <img [src]="perfil.perfilPhoto" id="perfilPhoto" alt="" class="img-fluid border border-white border-5 rounded-circle">
+            <img [src]="perfil.imgPhoto" id="perfilPhoto" alt="" class="img-fluid border border-white border-5 rounded-circle">
         </div>
         <div class="col-xs-12 col-xs-2 col-md-2 col-lg-2 perfil-nom pt-lg-4 pt-xl-5">
-            <h5 class="fw-bold pt-5 pt-md-3 mt-md-4 pt-lg-4 mt-lg-4 pt-xl-5 mt-xl-5" id="perfilNombre" >{{perfil.perfilNombre}}</h5>
-            <p class="">Ing.Software </p>
+            <h5 class="fw-bold pt-5 pt-md-3 mt-md-4 pt-lg-4 mt-lg-4 pt-xl-5 mt-xl-5" id="perfilNombre" >
+                {{perfil.firstname}} {{perfil.lastname}}
+            </h5>
+            <p class="">{{perfil.profession}} </p>
         </div>
         <div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 text-center">
             <span>
                 <h1>Acerca de mí</h1>
-                <p>{{perfil.perfilAcercaDe}}</p>
+                <p>{{perfil.aboutMe}}</p>
             </span>
         </div>
     </div>
