--- a/examAngular/Portfolio/src/app/components/experiencia/experiencia.component.html
+++ b/examAngular/Portfolio/src/app/components/experiencia/experiencia.component.html
@@ -1,33 +1,32 @@
-<div class="container my-2">
+<!--<div class="container my-2">
     <div class="row bg-white mxs-1">
         <h1>Experiencia Laboral</h1>
         <div class="col-lg-12">
-            <ul class="list-group">
-                <li class="list-group-item my-2 border border-2">
-                    <h1 class="d-inline">{{expe.experienciaTitle}} -</h1>
-                    <h3 class="d-inline"> ({{expe.experienciaAnios}} Años)</h3>
-                    <p>
-                        {{expe.experienciaContent}}
-                    </p>
+            <ul class="list-group d-flex justify-content-between align-items-start" *ngFor="let exp of exps">
+                <li class="list-group-item my-2 border border-2 row">
+                    
+                    <h1 class="d-inline col-6">{{exp.position}} -</h1>
+                    <h3 class="d-inline col-5"> (Acá se calcula los años con datestart y end Años)</h3>
+                    <button class="btn btn-success  col-1 me-auto float-left">editar</button>
+                    <h6 class="col-12">
+                        {{exp.description}}
+                    </h6>
                 </li>
-                
-                <li class="list-group-item my-2 border border-2">
-                    <h1 class="d-inline">{{expe.experienciaTitle2}} -</h1>
-                    <h3 class="d-inline"> ({{expe.experienciaAnios2}} Años)</h3>
-                    <p>
-                        {{expe.experienciaContent2}}
-                    </p>
-                </li>
-                
-                <li class="list-group-item my-2 border border-2">
-                    <h1 class="d-inline">{{expe.experienciaTitle3}} -</h1>
-                    <h3 class="d-inline"> ({{expe.experienciaAnios3}} Años)</h3>
-                    <p>
-                        {{expe.experienciaContent3}}
-                    </p>
-                </li>
-                
             </ul>
+        </div>
+    </div>
+</div>-->
+<div class="container">
+    <div class="row bg-white mxs-1 border-top" *ngFor="let exp of exps">
+        <div class="col-lg-10">
+            <h1 class="card-title">
+                {{exp.position}}
+            </h1>
+            <p>{{exp.description}}</p>
+        </div>
+        <div class="col-lg-2">
+            <button type="button" class="btn btn-primary mx-auto">Editar</button>
+            
         </div>
     </div>
 </div>
