--- a/examAngular/Portfolio/src/app/components/footer/footer.component.html
+++ b/examAngular/Portfolio/src/app/components/footer/footer.component.html
@@ -1,8 +1,8 @@
 <div class="mt-5">
     <div class="row bg-secondary  p-5">
-        <footer>
-            <p>Alan Bonnet | &copy; Argentina Programa 2022</p>
-            <p>Formosa,Argentina</p>
+        <footer class="text-center">
+            <p class=" d-inline">Alan Bonnet | &copy; Argentina Programa 2022</p>
+            <p class=" d-inline"> | Argentina, Formosa.</p>
         </footer>
     </div>
 </div>
