--- a/examAngular/Portfolio/src/app/components/proyecto/proyecto.component.html
+++ b/examAngular/Portfolio/src/app/components/proyecto/proyecto.component.html
@@ -21,7 +21,7 @@
                 </p>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-3 part2 offset-md-1 offset-lg-1 mt-2">
-                <img [src]="perfil.perfilPhoto" alt="" class="img-fluid rounded bg-body p-1 shadow-lg ">
+                <img [src]="" alt="" class="img-fluid rounded bg-body p-1 shadow-lg ">
             </div>
         </div>
     </div>
