--- a/examAngular/Portfolio/src/app/components/header/perfil/perfil.component.html
+++ b/examAngular/Portfolio/src/app/components/header/perfil/perfil.component.html
@@ -1,7 +1,7 @@
 <!-- Perfil Inicio -->
 <div class="container ">
     <div class="row bg-white my-2 mxs-1 p-2">
-        <div class="col-xd-12 col-sn-2 col-md-2 col-lg-2 ">
+        <div class="col-xd-12 col-sm-2 col-md-2 col-lg-2 ">
             
             <img [src]=" autoImgPhoto()" id="perfilPhoto" alt="" class="img-fluid border border-white border-5 rounded-circle">
             
