--- a/examAngular/Portfolio/src/app/components/hys-skills/hys-skills.component.html
+++ b/examAngular/Portfolio/src/app/components/hys-skills/hys-skills.component.html
@@ -15,13 +15,14 @@
                         [innerStrokeColor]="'#C7E596'"
                         [animation]="true"
                         [animationDuration]="300"
+                        [animateTitle]="true"
                         
                         >
                     </circle-progress>
         </div>
         <div class="col-6 col-sm-6 col-md-4 col-lg-3">
             <circle-progress
-                        [percent]="85"
+                        [percent]="67"
                         [radius]="80"
                         [showUnits]="false"
                         [title]="'CSS'"
@@ -39,7 +40,7 @@
         </div>
         <div class="col-6 col-sm-6 col-md-4 col-lg-3">
             <circle-progress
-                        [percent]="85"
+                        [percent]="76"
                         [radius]="80"
                         [showUnits]="false"
                         [title]="'JS'"
@@ -57,7 +58,7 @@
         </div>
         <div class="col-6 col-sm-6 col-md-4 col-lg-3">
             <circle-progress
-                        [percent]="85"
+                        [percent]="98"
                         [radius]="80"
                         [showUnits]="false"
                         [title]="'GitHub'"
@@ -75,7 +76,7 @@
         </div>
         <div class="col-6 col-sm-6 col-md-4 col-lg-3">
             <circle-progress
-                        [percent]="85"
+                        [percent]="67"
                         [radius]="80"
                         [showUnits]="false"
                         [title]="'English'"
@@ -93,7 +94,7 @@
         </div>
         <div class="col-6 col-sm-6 col-md-4 col-lg-3">
             <circle-progress
-                        [percent]="85"
+                        [percent]="52"
                         [radius]="80"
                         [showUnits]="false"
                         [title]="'Angular'"
