--- a/examAngular/Portfolio/src/app/components/proyecto/proyecto.component.html
+++ b/examAngular/Portfolio/src/app/components/proyecto/proyecto.component.html
@@ -1,8 +1,8 @@
 <div class="container my-2">
     <div class="bg-white mxs-1">
         <h1 class="ps-3 pt-3">Proyectos Realizados</h1>
-        <div class="contenedor row">
-            <div class="col-sm-12 col-md-7 col-md-lg-7 part1">
+        <div class="contenedor row ">
+            <div class="col-sm-12 col-md-7 col-md-lg-7 part1 border-top">
                 <h2>Encriptador</h2>
                 <p>Lorem ipsum dolor sit amet 
                     consectetur, adipisicing elit. 
@@ -20,8 +20,8 @@
                     nostrum. Saepe, enim. Nulla, ex?
                 </p>
             </div>
-            <div class="col-sm-12 col-md-4 col-lg-3 part2 offset-md-1 offset-lg-1 mt-2">
-                <img [src]="" alt="" class="img-fluid rounded bg-body p-1 shadow-lg ">
+            <div class="col-sm-12 col-md-4 col-lg-3 part2 offset-md-1 offset-lg-1 mt-2 mb-3 ">
+                <img [src]="proyectoImg" alt="" class="img-fluid rounded-pill bg-body p-1 shadow-lg ">
             </div>
         </div>
     </div>
