--- a/examAngular/Portfolio/src/app/components/header/perfil/perfil.component.html
+++ b/examAngular/Portfolio/src/app/components/header/perfil/perfil.component.html
@@ -3,7 +3,7 @@
     <div class="row bg-white my-2 mxs-1 p-2">
         <div class="col-xd-12 col-sm-2 col-md-2 col-lg-2 ">
             
-            <img [src]=" autoImgPhoto()" id="perfilPhoto" alt="" class="img-fluid border border-white border-5 rounded-circle">
+            <img *ngIf="perfil.imgPhoto.length > 4" [src]=" autoImgPhoto()" id="perfilPhoto" alt="" class="img-fluid border border-white border-5 rounded-circle">
             
         </div>
         <div class="col-xs-12 col-xs-2 col-md-2 col-lg-2 perfil-nom pt-lg-4 pt-xl-5">
