--- a/examAngular/Portfolio/src/app/components/header/banner/banner.component.html
+++ b/examAngular/Portfolio/src/app/components/header/banner/banner.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-4 ">
     <div class="row">
         <div class="col-12 ">
-            <img *ngIf="perfil.imgBanner.length > 4" [src]="autoImgBanner()" class="img-fluid p-2 bg-white rounded-top-25px" alt="">
+            <img  [src]="autoImgBanner()" [class]="claseImgBanner" alt="">
             <input type="text" name="" id="" class="form-control" value="" *ngIf="">
         </div>
     </div>
